cabal-version:      3.0
name:               checkliner
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/ruzen42/checkliner
license:            GPL-3.0-only
license-file:       LICENSE
author:             ruzen42
maintainer:         malledeferlive@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable checkliner
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010 
