cabal-version:      3.0
name:               checkliner
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             ruzen42
maintainer:         malledefer@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable checkliner
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
                    , optparse-applicative
                    , text
                    , directory
                    , filepath
    hs-source-dirs:   src
    default-language: GHC2021
